// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when association property has invalid identifier of association in dependency namespace should have validation failure for property 1`] = `"Association property 'NotValid' does not match any declared Association or Association Subclass in namespace Extension."`;

exports[`when association property has invalid identifier of association in dependency namespace should have validation failure for property 2`] = `
Object {
  "column": 16,
  "line": 21,
  "tokenText": "NotValid",
}
`;

exports[`when association property has invalid identifier should have validation failure for property 1`] = `"Association property 'UndefinedEntityName' does not match any declared Association or Association Subclass in namespace EdFi."`;

exports[`when association property has invalid identifier should have validation failure for property 2`] = `
Object {
  "column": 16,
  "line": 5,
  "tokenText": "UndefinedEntityName",
}
`;

exports[`when association property refers to association in non-dependency namespace should have validation failure for property 1`] = `"Association property 'AssociationEntity' does not match any declared Association or Association Subclass in namespace Extensiona."`;

exports[`when association property refers to association in non-dependency namespace should have validation failure for property 2`] = `
Object {
  "column": 16,
  "line": 14,
  "tokenText": "AssociationEntity",
}
`;
